# Tyran

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  PKG-INFO  README.md  SECURITY.md  docker-compose-mysql.yml  docker-compose-sqlite.yml  otel_collector_config.yaml  pycodestyle  pyproject.toml  requirements.freeze.txt  requirements.txt  setup.py  techstack.md  techstack.yml
.github/workflows/: api.yml  docker.yml  freeze.yml
app/: __init__.py  main.py  test_main.py
app/api/: router.py
app/api/v1/: deps.py  document.py  health.py  model.py  router.py  search.py  tasks.py
app/api/web/: health.py  home.py  ready.py
app/core/: chroma.py  config.py  configs.py  crud.py  database.py  errors.py  logger.py  middleware.py  models.py  openai_client.py  qdrant.py  schemas.py  telemetry.py  validator.py
app/db/: __init__.py  client.py  migrate.py  scheme.py
app/middleware/: __init__.py  auth.py  exception.py  logger.py
app/model/: __init__.py  document.py  document_meta.py  option.py  search.py
app/module/: __init__.py  document.py  search.py
app/repository/: __init__.py  document.py  document_meta.py  option.py
app/service/: __init__.py  openai.py  qdrant.py  validator.py
docs/: index.html
pyarchiver/: __init__.py  pyarchiver.py  tarinfo.py  tarpack.py  zipinfo.py  zippack.py
static/img/: chart.excalidraw
testdata/: load.py  runbook1.md  runbook10.md  runbook11.md  runbook12.md  runbook13.md  runbook14.md  runbook2.md  runbook3.md  runbook4.md  runbook5.md  runbook6.md  runbook7.md  runbook8.md  runbook9.md  search.py
tests/: test_document_search_request.py  test_pyarchiver.py
