[project]
name = "tyran"
version = "0.7.2"
description = "A Vector Search as a Service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]==0.116.1",
    "jsonschema==4.25.0",
    "mysqlclient==2.2.7",
    "openai==1.97.1",
    "opentelemetry-exporter-otlp==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-sdk==1.27.0",
    "pydantic-settings==2.10.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "pytyran==0.1.5",
    "qdrant-client==1.15.1",
    "requests==2.32.3",
    "ruff>=0.7.2",
    "sqlalchemy==2.0.42",
    "uvicorn[standard]==0.35.0",
]
